--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-23 21:33:28
+lastsearch = 2024-07-23 23:19:53
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -47.6%%
-title = ga gối cotton xoa nhung đám cưới hồng mvdv16
-url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
+match = -95.2%%
+title = [giá hủy diệt]Bộ ga gối bo chun bọc đệm,vải cotton poly ...
+url = https://shopee.vn/-giá-hủy-diệt-Bộ-ga-gối-bo-chun-bọc-đệm-vải-cotton-poly-chọn-nhiều-mẫu-tam-giác-ghi--i.703206422.11490325681
 
 [runa.vn]
 match = -23.8%%
