--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-23 22:38:04
+lastsearch = 2024-07-23 23:20:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -695,4 +695,9 @@ url = https://chinhphu.vn/
 match = -106.2%%
 title = Sử dụng AssistiveTouch trên Apple Watch
 url = https://support.apple.com/vi-vn/guide/watch/apdec70bfd2d/watchos
+
+[phaata.com]
+match = 0.0%%
+title = Ho Chi Minh ZIP code
+url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
