--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-23 14:46:53
+lastsearch = 2024-07-23 23:17:37
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkj6EE3T&sig=ACfU3U0Bx2mcjyCik_vlVzMknKnE6LFBEQ&hl=en&sa=X&ved=2ahUKEwi-443s1byHAxXcFFkFHbyuAgAQ6AF6BAgdEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBv8xrsn&sig=ACfU3U1Yb6n2C-O_dmYeI9GucXCb8JC-jg&hl=en&sa=X&ved=2ahUKEwi6qZOAyL2HAxXaK1kFHU6NB6oQ6AF6BAgjEAM
 
 [www.diepxuan.com]
 match = -81.0%%
