--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-23 13:38:10
+lastsearch = 2024-07-23 23:25:08
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -111.1%%
-title = ♀Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -172.2%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
+url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -38,12 +38,12 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
 match = -100.0%%
-title = Vỏ gối EP1818 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-ep1818-45x65.html
+title = Vỏ gối EPCWAVE 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epcwave-45x65.html
 
 [shopee.vn]
-match = -116.7%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
