--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-23 22:49:04
+lastsearch = 2024-07-23 23:37:23
 
 [hk.linkedin.com]
 match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+title = Chan Hoi Ching Ella - HKU Business School
+url = https://hk.linkedin.com/in/chan-hoi-ching-ella
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -23.1%%
+title = Hoi Chan (@hoichandraws)
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -307.7%%
-title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
-url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
+match = -315.4%%
+title = #stitch mit @Steven Chan Hoi Sing Keine Frauen für uns mehr ...
+url = https://www.tiktok.com/@artis_just_for_7/video/7377443374200098081
 
 [admissions.hku.hk]
 match = -38.5%%
@@ -62,8 +62,8 @@ title = Coco-Tex Fashion (Hong Kong) Limited
 url = https://sourcing.hktdc.com/en/Supplier-Store-Directory/Coco-Tex-Fashion-Hong-Kong-Limited/1X031J0F
 
 [meeko.vn]
-match = -92.3%%
-title = Hội thú lông xù Coco Chan | Meeko
+match = -123.1%%
+title = Hội gấu bông lông xù Coco Chan - Meeko
 url = https://meeko.vn/hoi-thu-long-xu
 
 [hk.kompass.com]
