--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-23 21:20:21
+lastsearch = 2024-07-23 23:41:45
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -29.6%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [foreverbedding.net]
 match = 0.0%%
