--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-23 22:31:58
+lastsearch = 2024-07-23 23:55:14
 
 [eva.vn]
 match = -131.6%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOopXVTXYLrYbPhTY_uYaHfWm3yPU-2vQlXBoX-hVjSkrDqN-nU9a
 
 [mietistudio.com]
 match = -131.6%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -89.5%%
-title = CHIỀU THU HỌA BÓNG NÀNG | DATKAA x QT BEATZ ...
-url = https://www.youtube.com/watch?v=PlVlWl8kKmg
+match = -84.2%%
+title = GIÁNG HƯƠNG - MỘT TRONG NHỮNG CÂY ĐƯỢC LỰA ...
+url = https://www.youtube.com/watch?v=4b4I5bw-Mw0
 
 [trungquang.com]
 match = 0.0%%
