--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-23 20:34:22
+lastsearch = 2024-07-23 23:48:10
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -126.7%%
-title = Celadon Sports & Resort Club - Facebook
-url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
+match = -166.7%%
+title = Celadon Sports & Resort Club | Ho Chi Minh City
+url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
 
 [lacvietauction.vn]
 match = -80.0%%
