--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-23 21:19:06
+lastsearch = 2024-07-23 23:48:32
 
 [xoptraisan.info]
 match = -147.4%%
@@ -12,9 +12,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = -78.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -31.6%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
 match = 26.3%%
