--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-23 18:31:38
+lastsearch = 2024-07-23 23:47:46
 
 [ninhouse.vn]
 match = -246.2%%
@@ -155,4 +155,9 @@ url = http://isonicinternational.com/
 match = -207.7%%
 title = ACGSI - 1910 Population Schedule of Allen County
 url = https://www.acgsi.org/1910popu/
+
+[nemvanxuan.com]
+match = -223.1%%
+title = Vỏ Gối Vạn Xuân Chính Hãng Mẫu Mã Đa Dạng Giá Tốt ...
+url = https://nemvanxuan.com/danh-muc/chan-ga-goi/vo-goi
 
