--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-23 14:30:34
+lastsearch = 2024-07-24 01:20:45
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -107,8 +107,8 @@ title = Homeowners' Associations
 url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
 
 [business.nv.gov]
-match = -170.6%%
-title = Homeowners Association Complaints - Business and Industry
+match = -52.9%%
+title = Homeowners Association Complaints
 url = https://business.nv.gov/Homeowner/Homeowners_Association_Complaints/
 
 [www.nolo.com]
