--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-23 21:47:34
+lastsearch = 2024-07-24 01:23:44
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = -26.7%%
-title = Ethereum Tokens
-url = https://cryptoslate.com/blockchain/ethereum/
+match = 8.7%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [www.irs.gov]
 match = -78.3%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -104.3%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -91.3%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -13.0%%
-title = What Hair Dye to Use for King Von
-url = https://www.tiktok.com/discover/what-hair-dye-to-use-for-king-von
+match = 0.0%%
+title = Limerick Incident Bus Story
+url = https://www.tiktok.com/discover/limerick-incident-bus-story
 
 [www.unikorea.go.kr]
 match = -113.0%%
@@ -343,8 +343,8 @@ url = https://archiveofourown.org/tags/Stray Kids (Band)/works
 
 [eur-lex.europa.eu]
 match = 0.0%%
-title = C_2009265HU.01000101.xml
-url = https://eur-lex.europa.eu/legal-content/HU/TXT/HTML/?uri=CELEX:52009XG1106(01)
+title = C_2014018HU.01000101.xml
+url = https://eur-lex.europa.eu/legal-content/HU/TXT/HTML/?uri=CELEX:52014XG0121(01)
 
 [www.abc.net.au]
 match = -91.3%%
