--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-23 22:33:52
+lastsearch = 2024-07-24 01:50:53
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -85.7%%
-title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
-url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
+match = 28.6%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.roc-taiwan.org]
 match = -128.6%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
@@ -112,9 +112,9 @@ title = Ăn cơm Đài Loan, thờ ma Trung Cộng
 url = https://www.nguoi-viet.com/binh-luan/an-com-dai-loan-tho-ma-trung-cong/
 
 [trithucvn.co]
-match = -95.2%%
-title = Chuyên gia Đài Loan: 4 nguyên nhân đích thân ông Tập ...
-url = https://trithucvn.co/the-gioi/chuyen-gia-dai-loan-4-nguyen-nhan-dich-than-ong-tap-vieng-ong-nguyen-phu-trong.html
+match = -123.8%%
+title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
+url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
 
 [www.vietnamplus.vn]
 match = -119.0%%
@@ -182,9 +182,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [www.skyscanner.com.vn]
-match = -114.3%%
-title = Vé giá rẻ từ Thành phố New York đi Taipei Taiwan Taoyuan ...
-url = https://www.skyscanner.com.vn/routes/nyca/tpe/thanh-pho-new-york-to-taipei-taiwan-taoyuan.html
+match = -95.2%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [113.165.166.110:81]
 match = -81.0%%
